hydroflow_plus_test/src/local/snapshots/hydroflow_plus_test__local__chat_app__tests__chat_app_no_replay@graphvis_mermaid.snap
---
source: hydroflow_plus_test/src/local/chat_app.rs
expression: "chat_server.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(users_stream)</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(messages)</code>"/]:::pullClass
3v1[\"<div style=text-align:center>(3v1)</div> <code>map({<br>    use crate::__staged::local::chat_app::*;<br>    |s| s.to_uppercase()<br>})</code>"/]:::pullClass
4v1[\"(4v1) <code>cross_join::&lt;'static, 'tick&gt;()</code>"/]:::pullClass
5v1[/"<div style=text-align:center>(5v1)</div> <code>for_each({<br>    use crate::__staged::local::chat_app::*;<br>    let output = output;<br>    |t| {<br>        output.send(t).unwrap();<br>    }<br>})</code>"\]:::pushClass
2v1-->3v1
1v1-->|0|4v1
3v1-->|1|4v1
4v1-->5v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
    3v1
    4v1
    5v1
    subgraph sg_1v1_var_stream_0 ["var <tt>stream_0</tt>"]
        1v1
    end
    subgraph sg_1v1_var_stream_1 ["var <tt>stream_1</tt>"]
        2v1
    end
    subgraph sg_1v1_var_stream_2 ["var <tt>stream_2</tt>"]
        3v1
    end
    subgraph sg_1v1_var_stream_3 ["var <tt>stream_3</tt>"]
        4v1
    end
end

